Corrections before deploy: Squashed commit of the following:
commit 28c28b33fd5d074dc3d2c3b0240897e6fbe47c8a
Author: AK <anakarengarzar@gmail.com>
Date:   Wed Sep 7 23:50:49 2022 +0300

    Changed link from placeholder to github

commit f497ccb6ed8b226da1dcd8c4fa9c4a0984e34849
Author: AK <anakarengarzar@gmail.com>
Date:   Wed Sep 7 23:48:44 2022 +0300

    Added a fake cv doc to try download link

commit 2a1841fd8ffd19c45fe843a0a7be6d51fc322de6
Author: AK <anakarengarzar@gmail.com>
Date:   Wed Sep 7 23:44:09 2022 +0300

    Index page layout adjustments for small screens

commit 503f52ed744afef53b9bb07f823611cc60601353
Author: AK <anakarengarzar@gmail.com>
Date:   Wed Sep 7 23:18:51 2022 +0300

    Corrected contact page element layout for smaller screens

commit b093670641209c0608999abd7c16afd77c125046
Author: AK <anakarengarzar@gmail.com>
Date:   Wed Sep 7 23:02:23 2022 +0300

    Enable css editing file

    Comment out production.css
    Remove comment from style.css

commit 3e98e14d2a29cdfb30a427bc3be37ba167c417c4
Author: AK <anakarengarzar@gmail.com>
Date:   Wed Sep 7 22:57:02 2022 +0300

    Dissable of tota11y

    Comment out tota11y java script

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,15 +110,6 @@ input[type=submit] {
   transition: 0.5s opacity;
 }
 
-input[type=submit] {
-  background-color: var(--salmon);
-  padding: 5px;
-  width: 10%;
-  font-weight: var(--weight-semibold);
-  font-size: 15px;
-  margin-top: 5px;
-}
-
 .button:visited {
     color: var(--off-white);
 }
@@ -206,7 +197,7 @@ input[type=submit]:hover {
   border-radius: 50%;
 }
 
-.intro{
+.intro-text{
   margin-bottom: 30px;
 }
 
@@ -355,15 +346,29 @@ input[type=submit]:hover {
   padding: 0px 40px;
 }
 
+#contact-form {
+  width: 60%;
+  margin:auto;
+}
+
 .contact-form__input{
   border: #f7f2ee;
   border-radius: 10px;
   outline-color: var(--dark-blue);
-  min-width: 40%;
+  width: 100%;
   margin: 5px;
   padding: 10px;
   color: var(--green);
   font-weight: var(--regular);
+}
+
+input[type=submit] {
+  background-color: var(--salmon);
+  padding: 5px;
+  width: 30%;
+  font-weight: var(--weight-semibold);
+  font-size: 15px;
+  margin-top: 5px;
 }
 
 .contact-info {
@@ -373,20 +378,56 @@ input[type=submit]:hover {
   padding: 10px 0 10px 0;
   background-color: rgba(255, 255, 255, 0.626);
   border-radius: 10px;
-  width: 40%;
+  width: 60%;
 }
 
 /*-----media queries-----*/
 @media all and (max-width: 625px){
+  
+  /*---general---*/
+    
+  h1 {
+    font-size: 60px;
+  }
 
-    .project-grid {
-      max-width: 450px;
-      grid-template-columns: 1fr;
-      min-height: 600px;
-      grid-gap: 10px;
-    }
+  /*---index page---*/
 
-    h1 {
-      font-size: 60px;
-    }
+  .content-profile {
+    max-width: 90%;
+    margin: 35px auto 20px;
+    text-align: center;
+  }
+  
+  .content-profile__picture {
+    float: none; 
+    width: 220px;
+    margin: 0;
+  }
+
+  .intro-title {
+    margin: 20px auto;
+  }
+  
+  .intro-text{
+    margin: 20px auto 30px auto;
+  }
+  
+  /*---project page---*/
+
+  .project-grid {
+    max-width: 450px;
+    grid-template-columns: 1fr;
+    min-height: 600px;
+    grid-gap: 10px;
+  }
+
+  /*---contact page---*/
+  
+  #contact-form {
+    width: 95%;
+  }
+
+  .contact-info {
+    width: 95%;
+  }
 }
